--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "deploy": "strapi deploy"
+    "deploy": "strapi deploy",
+    "postinstall": "npm install -g npm@7"
   },
   "devDependencies": {},
   "dependencies": {
@@ -31,8 +32,8 @@
     "uuid": "d7bc7019-c738-46f6-82e0-b4fd2e33e6d4"
   },
   "engines": {
-    "node": ">=16.0.0 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.x",
+    "npm": "7.x"
   },
   "license": "MIT"
 }
